# type-bridge

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  README.zh-CN.md  README.zh.md  REQUIREMENTS.md  TECH_DESIGN.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
blog/: typebridge-intro-en.md  typebridge-intro-zh.md
blog/screenshots/: README.md
dingtalk-bridge/: commands.go  go.mod  go.sum  handler.go  image.go  main.go
docs/: BLOG.md  DEV_SETUP.md  REQUIREMENTS.md  TECH_DESIGN.md
docs/REQUIREMENTS/: 01-product-features.md  02-multichannel.md  03-webchat.md  04-about.md  05-arch-ui.md  06-roadmap-cicd.md  07-website.md  README.md
docs/TECH_DESIGN/: 01-stack.md  02-core-impl.md  03-ui-tab.md  04-input-events.md  05-selftest.md  06-error-handling.md  07-input-strategy.md  08-cicd.md  09-website.md  10-multichannel-arch.md  11-channel-impl.md  12-webchat.md  13-i18n.md  README.md
feishu-bridge/: commands.go  go.mod  handler.go  main.go
scripts/: build-all.sh  fix_dsstore.py  generate-icons.py  inject-dmg-layout.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: dmg-dsstore  icon.icns
src-tauri/resources/: README - First Launch.txt  首次启动前必读.txt
src-tauri/src/: about.rs  channel.rs  help.rs  history.rs  injector.rs  lib.rs  logger.rs  main.rs  notification.rs  queue.rs  sidecar.rs  store.rs  tray.rs  webchat.rs  webchat_net.rs  webchat_server.rs  window.rs
src/components/: AccessibilityBanner.tsx  AccessibilityGate.tsx  ChannelIcon.tsx  ChannelTag.tsx  ConfigWindow.tsx  ConfirmDialog.tsx  ConfirmOverlay.tsx  ConnectionHub.tsx  ErrorBoundary.tsx  HistoryCard.tsx  KeyBindInput.tsx  LanguagePicker.tsx  LanguageSwitcher.tsx  LinkAppsHub.tsx  LogWindow.tsx  MainWindow.tsx  SelftestChecklist.tsx  SideBar.tsx  StatusTag.tsx  TabBar.tsx  ThemeSwitcher.tsx
src/components/tabs/: AboutTab.tsx  ComingSoonTab.tsx  ConnectionTab.tsx  DingTalkConnectionTab.tsx  HistoryTab.tsx  InputSettingsTab.tsx  QuickInputTab.tsx  SystemLogTab.tsx  WeComConnectionTab.tsx  WebChatConnectionTab.tsx
src/i18n/: dict.ts  index.ts  runtime.ts
src/store/: index.ts
src/styles/: globals.css
webchat/: .gitignore  middleware.ts  netlify.toml  next.config.ts  package-lock.json  package.json
webchat-local/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
webchat-local/dist-tsc-node/: vite.config.js
webchat-local/src/: App.tsx  i18n.ts  styles.css
webchat-local/src/components/: ChatPage.tsx  ComposerBar.tsx  ErrorScreen.tsx  HandshakeForm.tsx  ImagePicker.tsx  MessageBubble.tsx  PCBlockView.tsx  PressableTile.tsx  QuickCommands.tsx  ShortcutKeysPanel.tsx  TouchPad.tsx  VoiceButton.tsx  VoiceHintModal.tsx
webchat-local/src/hooks/: usePressable.ts
webchat-local/src/lib/: haptic.ts  image.ts  socket.ts  storage.ts  tapSound.ts  ua.ts
webchat/app/: globals.css  layout.tsx  page.tsx
webchat/app/components/: AudioRecorder.tsx  AuxCodeEntry.tsx  ChatPage.tsx  ComposerBar.tsx  ErrorScreen.tsx  HandshakeForm.tsx  ImagePicker.tsx  MessageBubble.tsx  MobileApp.tsx  MobileAppClient.tsx  PCBlockView.tsx  VoiceButton.tsx  VoiceEnginePicker.tsx  WeChatBlockView.tsx
webchat/app/lib/: auth.ts  image.ts  relay.ts  ua.ts  (+3 more)
webchat/scripts/: fetch-models.mjs
website/: next.config.ts  package-lock.json  package.json
website-v2/: package-lock.json  package.json
website-v2/app/: globals.css  layout.tsx  page.tsx
website/app/: client-shell.tsx  globals.css  home-client.tsx  layout.tsx  page.tsx  robots.ts  sitemap.ts
wecom-bridge/: client.go  commands.go  go.mod  handler.go  image.go  image_test.go  main.go
(+49 files in other folders)
