[package]
name = "type-bridge"
version = "0.1.0"
description = "TypeBridge - 飞书消息注入桌面输入框"
authors = ["parksben"]
edition = "2021"

[lib]
name = "type_bridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSPasteboard", "NSWorkspace", "NSRunningApplication", "libc"] }
objc2-foundation = { version = "0.2", features = ["NSString", "NSData", "NSURL", "NSArray"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
# WebChat 渠道（轮询中继 + 本地随机生成 OTP / sessionId / token）
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
tokio-util = "0.7"
